--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>web pertama woy</title>
 </head>
 <body>
-    <h3>Selamat Datang Pemirsa</h3>
+    <h3>Selamat datang, pemirsa</h3>
 </body>
 </html>
